fixtures/invalid/path-alias-extends-private-import/src/b/public.ts
import { secret } from "@a/internal/secret";

export const b = secret;
